--- a/app/javascript/stylesheets/redesign/_properties.scss
+++ b/app/javascript/stylesheets/redesign/_properties.scss
@@ -16,3 +16,7 @@ $tablet-min: 768px;
 $tablet-max: 1023px;
 $laptop-min: 1024px;
 $laptop-l: 1440px;
+
+// Equivalent to viewport sizes + 1rem (16px)
+$mobile-max-plus-padding: 783px;
+$tablet-min-plus-padding: 784px;
